--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,5 +2,6 @@
   display: block;
   background: url(~asset/img/bg.jpg) no-repeat center center/cover fixed;
   // background-size: cover;
+  // height: 100%; // comment this out to persist scroll position after refresh
   overflow-x: hidden;
 }
