--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,4 @@
-<a class="nav-trigger" href="#" (click)="onClick($event)">
+<a class="nav-trigger" href="#" (click)="onClick($event)" (window:resize)="onWindowResize($event)"
+  [class.sidebar-active]="sidebarActive">
   <i class="fa fa-bars" aria-hidden="true"></i>
 </a>
