--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <narr-nav #nav (sidebarTrigger)="setActiveArea($event)"></narr-nav>
 <narr-sidebar [ngClass]="{'sidebar-ani': nav.sidebarAni, 'sidebar-active': nav.sidebarActive}"
-  [sidebarActive]="activeEl">
+  [sidebarActive]="activeEl" (closeSidebar)="nav.sidebarActive = false" [refEl]="mainEl">
 </narr-sidebar>
 <narr-main class="clearfix" [ngClass]="{'sidebar-ani': nav.sidebarAni, 'sidebar-active': nav.sidebarActive}">
 </narr-main>
