--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,10 +7,18 @@
 </div>
 
 <ul class="sidebar-filter-left">
-  <li [class.sidebar-active]="'intro' === sidebarActive"><a href="#intro">Intro</a></li>
-  <li [class.sidebar-active]="'portfolio' === sidebarActive"><a href="#portfolio">Portfolio</a></li>
-  <li [class.sidebar-active]="'about' === sidebarActive"><a href="#about">About Me</a></li>
-  <li [class.sidebar-active]="'contact' === sidebarActive"><a href="#contact">Contact</a></li>
+  <li [class.sidebar-active]="'intro' === sidebarActive">
+    <a href="#intro" (click)=onClick($event)>Intro</a>
+  </li>
+  <li [class.sidebar-active]="'portfolio' === sidebarActive">
+    <a href="#portfolio" (click)=onClick($event)>Portfolio</a>
+  </li>
+  <li [class.sidebar-active]="'about' === sidebarActive">
+    <a href="#about" (click)=onClick($event)>About Me</a>
+  </li>
+  <li [class.sidebar-active]="'contact' === sidebarActive">
+    <a href="#contact" (click)=onClick($event)>Contact</a>
+  </li>
 </ul>
 
 <ul class="sidebar-list-social">
