fix the sidebar menu's redrawing on scroll for chrome mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: block;
-  background: url(~asset/img/bg.jpg) no-repeat center center/cover fixed;
+  // background: url(~asset/img/bg.jpg) no-repeat center center/cover fixed;
   // background-size: cover;
   // height: 100%; // comment this out to persist scroll position after refresh
   overflow-x: hidden;
