--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -91,12 +91,13 @@
 
 // ========================
 :host {
-  background: #212228;
+  // background: #212228;
   position: fixed;
   left: 0;
-  top: 0;
-  bottom: 0;
+  // top: 0;
+  // bottom: 0;
   width: 320px;
+  height: 100%;
   box-shadow: inset -0.22em 0 0.22em 0 rgba(0, 0, 0, 0.1);
   z-index: 101;
   .sidebar-about {
