modify scss to boost the ani speed of sidebar on mobile

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -4,30 +4,36 @@ $selector-host: ':host';
 #{$selector-host} {
   display: block;
   background: url(~asset/img/bg.jpg) no-repeat center center/cover fixed;
-  margin-left: 320px;
+  // margin-left: 320px;
+  transform: translateX(320px);
 }
 
 @media (max-width: 1280px) {
   #{$selector-host} {
-    margin-left: 300px;
+    // margin-left: 300px;
+    transform: translateX(300px);
   }
 }
 
 @media (max-width: 1024px) {
   #{$selector-host} {
-    margin-left: 280px;
+    // margin-left: 280px;
+    transform: translateX(280px);
   }
 }
 
 @media (max-width: 800px) {
   #{$selector-host} {
-    margin-left: 0;
+    // margin-left: 0;
+    transform: translateX(0);
     width: 100%;
     &.sidebar-ani {
-      transition: margin-left 0.3s ease;
+      // transition: margin-left 0.3s ease;
+      transition: transform 0.3s ease;
     }
     &.sidebar-active {
-      margin-left: 200px;
+      // margin-left: 200px;
+      transform: translateX(200px);
     }
   }
 }
