modify scss for the sidebar's link

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -50,6 +50,7 @@
     margin-left: 2px;
     padding: 15px 40px;
     width: 84%;
+    box-sizing: border-box;
     color: inherit;
     font-size: 18px;
   }
