--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -4,28 +4,25 @@ $selector-host: ':host';
 #{$selector-host} {
   display: block;
   background: url(~asset/img/bg.jpg) no-repeat center center/cover fixed;
-  // margin-left: 320px;
-  transform: translateX(320px);
+  margin-left: 320px;
 }
 
 @media (max-width: 1280px) {
   #{$selector-host} {
-    // margin-left: 300px;
-    transform: translateX(300px);
+    margin-left: 300px;
   }
 }
 
 @media (max-width: 1024px) {
   #{$selector-host} {
-    // margin-left: 280px;
-    transform: translateX(280px);
+    margin-left: 280px;
   }
 }
 
 @media (max-width: 800px) {
   #{$selector-host} {
-    // margin-left: 0;
-    transform: translateX(0);
+    margin-left: 0;
+    // transform: translateX(0);
     width: 100%;
     &.sidebar-ani {
       // transition: margin-left 0.3s ease;
@@ -35,6 +32,12 @@ $selector-host: ':host';
       // margin-left: 200px;
       transform: translateX(200px);
     }
+  }
+}
+
+@media (max-width: 600px) {
+  #{$selector-host} {
+    background: url(~asset/img/bg.jpg) -1200px -120px;
   }
 }
 
