--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
   display: block;
   // background: url(~asset/img/bg.jpg) no-repeat center center/cover fixed;
   // background-size: cover;
+  background: #212228;
   // height: 100%; // comment this out to persist scroll position after refresh
   overflow-x: hidden;
 }
