--- a/src/app/main/contact/contact.component.scss
+++ b/src/app/main/contact/contact.component.scss
@@ -106,7 +106,7 @@ $selector-intro: 'narr-contact';
   }
 }
 
-@media (max-width: 1280px) {
+@media only screen and (max-width: 1280px) {
   :host {
     .contact-heading {
       font-size: 30px;
@@ -115,7 +115,7 @@ $selector-intro: 'narr-contact';
   }
 }
 
-@media (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   :host {
     .contact-section {
       padding-left: 0;
@@ -125,7 +125,7 @@ $selector-intro: 'narr-contact';
   }
 }
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   :host {
     .contact-section {
       width: 100%;
@@ -138,7 +138,7 @@ $selector-intro: 'narr-contact';
   }
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   :host {
     .contact-section {
       padding-left: 0;
