--- a/src/app/main/intro/intro.component.scss
+++ b/src/app/main/intro/intro.component.scss
@@ -34,7 +34,7 @@ $selector-intro: 'narr-intro';
   }
 }
 
-@media (max-width: 1280px) {
+@media only screen and (max-width: 1280px) {
   :host {
     .intro-padder {
       h1 {
@@ -44,7 +44,7 @@ $selector-intro: 'narr-intro';
   }
 }
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   :host {
     .intro-padder {
       padding: 125px 40px 200px 40px;
