--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -7,19 +7,19 @@ $selector-host: ':host';
   margin-left: 320px;
 }
 
-@media (max-width: 1280px) {
+@media only screen and (max-width: 1280px) {
   #{$selector-host} {
     margin-left: 300px;
   }
 }
 
-@media (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   #{$selector-host} {
     margin-left: 280px;
   }
 }
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   #{$selector-host} {
     margin-left: 0;
     // transform: translateX(0);
@@ -35,7 +35,7 @@ $selector-host: ':host';
   }
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   #{$selector-host} {
     background: url(~asset/img/bg.jpg) -1200px -120px;
   }
