--- a/src/app/main/portfolio/portfolio.component.scss
+++ b/src/app/main/portfolio/portfolio.component.scss
@@ -72,7 +72,7 @@ $selector-portfolio: 'narr-portfolio';
   }
 }
 
-@media (max-width: 1280px) {
+@media only screen and (max-width: 1280px) {
   :host {
     .portfolio-heading {
       margin: 10px 0 0 0;
@@ -84,7 +84,7 @@ $selector-portfolio: 'narr-portfolio';
   }
 }
 
-@media (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   :host {
     .portfolio-overlay {
       p {
@@ -97,7 +97,7 @@ $selector-portfolio: 'narr-portfolio';
   }
 }
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   :host {
     .portfolio-heading {
       margin: 10px 0;
@@ -105,7 +105,7 @@ $selector-portfolio: 'narr-portfolio';
   }
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   :host {
     .portfolio-padder {
       padding: 0 15px;
