--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -33,10 +33,18 @@ $nav-height: 35px;
   }
 }
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   :host {
     .nav-trigger {
       display: block;
+    }
+  }
+}
+
+// only for mobiles
+@media only screen and (max-device-width: 600px) {
+  :host {
+    .nav-trigger {
       &:hover {
         color: #3BCAA3;
       }
