change some contents to mine

--- a/src/app/main/about/about.component.html
+++ b/src/app/main/about/about.component.html
@@ -8,8 +8,8 @@
     the world's largest humanitarian agency on the front lines against hunger.
   </p>
   <div class="about-twitter" narrLoadTwidget>
-    <a class="twitter-timeline" href="https://twitter.com/_uloga" data-widget-id="554053174446010368"
+    <a class="twitter-timeline" href="https://twitter.com/nardgu" data-widget-id="729388392991981568"
       data-tweet-limit="5" data-border-color="#eee" data-chrome="transparent" data-dnt="true">
-      Tweets by @_uloga</a>
+      Tweets by @nardgu</a>
   </div>
 </div>
