--- a/src/app/main/intro/intro.component.html
+++ b/src/app/main/intro/intro.component.html
@@ -1,4 +1,4 @@
 <div class="intro-padder">
-  <h1>Decorator Front End Framework<br>Portfolio Theme</h1>
-  <a href="https://github.com/uloga/portfolio" target="_blank">Github &amp; Download</a>
+  <h1>I'm Jason<br>Front End Developer</h1>
+  <a href="https://github.com/narr" target="_blank">Github Repositories</a>
 </div>
