--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -23,22 +23,22 @@
 
 <ul class="sidebar-list-social">
   <li>
-    <a href="#" title="Github">
+    <a href="https://github.com/narr" title="Github" target="_blank">
       <i class="fa fa-github-square" aria-hidden="true"></i>
     </a>
   </li>
   <li>
-    <a href="#" title="LinkedIn">
+    <a href="https://www.linkedin.com/in/narrkim" title="LinkedIn" target="_blank">
       <i class="fa fa-linkedin-square" aria-hidden="true"></i>
     </a>
   </li>
   <li>
-    <a href="#" title="Twitter">
+    <a href="https://twitter.com/nardgu" title="Twitter" target="_blank">
       <i class="fa fa-twitter-square" aria-hidden="true"></i>
     </a>
   </li>
 </ul>
 
 <p class="sidebar-made-with box-sizing">
-  Made With: <a href="https://angular.io/">Angular2</a>
+  Made With: <a href="https://angular.io">Angular2</a>
 </p>
