modify scss to improve the ani performance on mobile

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -24,6 +24,8 @@ $selector-host: ':host';
     margin-left: 0;
     // transform: translateX(0);
     width: 100%;
+    backface-visibility: hidden;
+    perspective: 1;
     &.sidebar-ani {
       // transition: margin-left 0.3s ease;
       transition: transform 0.3s ease;
