--- a/src/app/main/intro/intro.component.html
+++ b/src/app/main/intro/intro.component.html
@@ -1,3 +1,4 @@
+<canvas narrRainBg></canvas>
 <div class="intro-padder">
   <h1>I'm Jason<br>Front End Developer</h1>
   <a href="https://github.com/narr" target="_blank">Github Repositories</a>
