add classname and background color to rain-bg canvas

--- a/src/app/main/intro/intro.component.html
+++ b/src/app/main/intro/intro.component.html
@@ -1,4 +1,4 @@
-<canvas narrRainBg></canvas>
+<canvas class="rain-bg" narrRainBg></canvas>
 <div class="intro-padder">
   <h1>I'm Jason<br>Front End Developer</h1>
   <a href="https://github.com/narr" target="_blank">Github Repositories</a>
