--- a/src/app/main/intro/intro.component.scss
+++ b/src/app/main/intro/intro.component.scss
@@ -8,7 +8,7 @@ $selector-intro: 'narr-intro';
 }
 
 :host {
-  canvas {
+  canvas.rain-bg {
     position: absolute;
     width: 100%;
     height: 100%;
