modify intro UI

--- a/src/app/main/intro/intro.component.html
+++ b/src/app/main/intro/intro.component.html
@@ -1,5 +1,6 @@
 <canvas class="rain-bg" narrRainBg></canvas>
-<div class="intro-padder">
+<div class="intro-center">
   <h1>I'm Jason<br>Front End Developer</h1>
   <a href="https://github.com/narr" target="_blank">Github Repositories</a>
 </div>
+<span class="intro-scroll-down"><i class="fa fa-angle-double-down fa-5x" aria-hidden="true"></i></span>
