modify scss for variable's name

--- a/src/app/main/intro/intro.component.scss
+++ b/src/app/main/intro/intro.component.scss
@@ -1,5 +1,5 @@
 // $selector-intro: ':host';
-$selector-intro: 'narr-intro';
+$selector-intro: narr-intro;
 $btn-color: #32AE8C;
 // ================================
 @keyframes intro-scroll-down {
