--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,6 @@
   // background: url(~asset/img/bg.jpg) no-repeat center center/cover fixed;
   // background-size: cover;
   background: #212228;
-  // height: 100%; // comment this out to persist scroll position after refresh
+  height: 100%;
   overflow-x: hidden;
 }
