--- a/src/app/main/intro/intro.component.scss
+++ b/src/app/main/intro/intro.component.scss
@@ -2,17 +2,6 @@
 $selector-intro: narr-intro;
 $btn-color: #32AE8C;
 // ================================
-@keyframes intro-scroll-down {
-  0% {
-    bottom: 5%;
-    opacity: 1;
-  }
-  100% {
-    bottom: 7%;
-    opacity: 0.2;
-  }
-}
-
 #{$selector-intro} {
   display: block;
   background: rgba(0, 144, 255, 0.3);
@@ -77,6 +66,19 @@ $btn-color: #32AE8C;
   }
 }
 
+// ================================
+@keyframes intro-scroll-down {
+  0% {
+    bottom: 5%;
+    opacity: 1;
+  }
+  100% {
+    bottom: 7%;
+    opacity: 0.2;
+  }
+}
+
+// ================================
 @media only screen and (max-width: 1280px) {
   :host {
     .intro-center {
