--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -97,7 +97,7 @@
   left: 0;
   // top: 0;
   // bottom: 0;
-  width: 320px;
+  width: 250px;
   height: 100%;
   box-shadow: inset -0.22em 0 0.22em 0 rgba(0, 0, 0, 0.1);
   z-index: 101;
@@ -117,13 +117,13 @@
 
 @media only screen and (max-width: 1280px) {
   :host {
-    width: 300px;
+    width: 200px;
   }
 }
 
 @media only screen and (max-width: 1024px) {
   :host {
-    width: 280px;
+    // width: 280px;
     .sidebar-about {
       .sidebar-title {
         font-size: 22px;
