--- a/src/app/main/about/about.component.scss
+++ b/src/app/main/about/about.component.scss
@@ -1,5 +1,5 @@
-// $selector-about: ':host';
-$selector-about: narr-about;
+// $selector-host: ':host';
+$selector-host: narr-about; // for SCSS's @import
 // ================================
 // over-1600
 $about-padding-over-1600: 100px 0 100px 80px;
@@ -30,7 +30,7 @@ $about-padding-max-480: 50px 25px 50px 25px;
 $about-wrapper-width-max-480: 320 - nth($about-padding-max-480, 2) - nth($about-padding-max-480, 4);
 // ================================
 // ================================
-#{$selector-about} {
+#{$selector-host} {
   display: block;
   background: rgb(255, 255, 255);
   padding: $about-padding-over-1600;
@@ -178,7 +178,7 @@ $about-wrapper-width-max-480: 320 - nth($about-padding-max-480, 2) - nth($about-
 // ================================
 // ================================
 @media only screen and (max-width: 1600px) {
-  #{$selector-about} {
+  #{$selector-host} {
     padding: $about-padding-max-1600;
   }
   :host {
@@ -198,7 +198,7 @@ $about-wrapper-width-max-480: 320 - nth($about-padding-max-480, 2) - nth($about-
 }
 
 @media only screen and (max-width: 1280px) {
-  #{$selector-about} {
+  #{$selector-host} {
     padding: $about-padding-max-1280;
   }
   :host {
@@ -217,7 +217,7 @@ $about-wrapper-width-max-480: 320 - nth($about-padding-max-480, 2) - nth($about-
 }
 
 @media only screen and (max-width: 800px) {
-  #{$selector-about} {
+  #{$selector-host} {
     padding: $about-padding-max-800;
   }
   :host {
@@ -238,7 +238,7 @@ $about-wrapper-width-max-480: 320 - nth($about-padding-max-480, 2) - nth($about-
 }
 
 @media only screen and (max-width: 480px) {
-  #{$selector-about} {
+  #{$selector-host} {
     padding: $about-padding-max-480;
   }
   :host {
