--- a/src/app/main/timeline/timeline.component.scss
+++ b/src/app/main/timeline/timeline.component.scss
@@ -196,7 +196,16 @@ $content-arrow-color: #fff;
 // ================================
 // ================================
 // .touch {}
-// .ie9 {}
+.ie9 {
+  :host {
+    .timeline {
+      li {
+        opacity: 1;
+      }
+    }
+  }
+}
+
 // ================================
 // ================================
 @media only screen and (max-width: 1600px) {
