--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -40,7 +40,14 @@ $navbar-trigger-hover-color: #fff;
 // ================================
 // ================================
 // .touch {}
-// .ie9 {}
+.ie9 {
+  :host {
+    .navbar-trigger {
+      margin: 20px 40px 0 0;
+    }
+  }
+}
+
 // ================================
 // ================================
 @media only screen and (max-width: 800px) {
