--- a/src/app/main/about/about.component.html
+++ b/src/app/main/about/about.component.html
@@ -26,8 +26,8 @@
         val.skills">
         <span class="blind">{{skill.name}}</span>
         <div class="about-skill-bg-wrapper ic-sprite-50">
-          <span [class]="skill.class"></span>
-          <span [class]="'rotate-x ' + skill.class"></span>
+          <span [class]="'rotate-base ' + skill.class"></span>
+          <span [class]="'rotate-hidden ' + skill.class"></span>
         </div>
       </a>
     </div>
