--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -26,7 +26,7 @@ $navbar-trigger-hover-color: #fff;
   .navbar-trigger {
     display: none;
     background: rgba(33, 34, 40, 0.2);
-    margin: 20px 20px 0 0;
+    margin: 30px 40px 0 0;
     padding: 4px 12px;
     line-height: 36px;
     color: #3BCAA3;
@@ -40,14 +40,7 @@ $navbar-trigger-hover-color: #fff;
 // ================================
 // ================================
 // .touch {}
-.ie9 {
-  :host {
-    .navbar-trigger {
-      margin: 20px 40px 0 0;
-    }
-  }
-}
-
+// .ie9 {}
 // ================================
 // ================================
 @media only screen and (max-width: 800px) {
